Fixed a lot of typos where 'suzaku' religion was referred to as 'suzako'.

--- a/localisation/replace/giu_decisions_l_english.yml
+++ b/localisation/replace/giu_decisions_l_english.yml
@@ -57,7 +57,7 @@
  aviumia_nation_desc:0 "So much potential lies in the Varlamorean lands, but the Kingdom of Varlamore did little to bring it to its full potential. They were too insular; too scared of progress. But our new realm of Aviumia shall compensate for the mistakes of the past!"
  
  fenisento_nation_title:0 "Found the Great Khanate of Fenisento"
- fenisento_nation_desc:0 "In the name of Suzako, the Vermillion Bird, we can unify their followers under a single Khan!"
+ fenisento_nation_desc:0 "In the name of suzaku, the Vermillion Bird, we can unify their followers under a single Khan!"
  hebikatochi_nation_title:0 "Found the Great Khanate of Hebikatochi"
  hebikatochi_nation_desc:0 "In the name of Genbu, the Black Tortoise, we can unify their followers under a single Khan!"
  konjinja_nation_title:0 "Found the Great Khanate of Konjinja"
