Added a lot of English localisation for Brassica Prime related content. Fixed province selection for brassicaprime_events.13 brassicaprime_events.13 now has a MTTH instead of being triggered_only, as nothing was triggering it otherwise.

--- a/localisation/replace/giu_religion_l_english.yml
+++ b/localisation/replace/giu_religion_l_english.yml
@@ -1264,3 +1264,29 @@
  turtleback_tombs_aspect:0 "Turtleback Tombs"
  way_of_the_water_aspect:0 "Way of the Water"
  way_of_warriors_aspect:0 "Way of Warriors"
+
+ # Brassicaprime harmonisations
+ harmonized_chaos:0 "Harmonized with the Chaos Faiths"
+ desc_harmonized_chaos:0 "We have incorporated the Chaos faiths in our country and national ethos."
+ harmonized_karamjan:0 "Harmonized with the Karamjan Faiths"
+ desc_harmonized_karamjan:0 "We have incorporated the Karamjan faiths in our country and national ethos."
+ harmonized_menaphite:0 "Harmonized with the Menaphite Faiths"
+ desc_harmonized_menaphite:0 "We have incorporated the Menaphite faiths in our country and national ethos."
+ harmonized_nonintervention:0 "Harmonized with the Non-Interventionism Faiths"
+ desc_harmonized_nonintervention:0 "We have incorporated the Non-Interventionism faiths in our country and national ethos."
+ harmonized_order:0 "Harmonized with the Order Faiths"
+ desc_harmonized_order:0 "We have incorporated the Order faiths in our country and national ethos."
+ harmonized_transcendent:0 "Harmonized with the Transcendent Faiths"
+ desc_harmonized_transcendent:0 "We have incorporated the ChTranscendentaos faiths in our country and national ethos."
+ harmonized_elder:0 "Harmonized with the Elder Faiths"
+ desc_harmonized_elder:0 "We have incorporated the Elder faiths in our country and national ethos."
+ harmonized_autocratic:0 "Harmonized with the Autocratic Faiths"
+ desc_harmonized_autocratic:0 "We have incorporated the Autocratic faiths in our country and national ethos."
+ harmonized_marimbo:0 "Harmonized with the Marimbo Faiths"
+ desc_harmonized_marimbo:0 "We have incorporated the Marimbo faiths in our country and national ethos."
+ harmonized_horror:0 "Harmonized with the Horror Faiths"
+ desc_harmonized_horror:0 "We have incorporated the Horror faiths in our country and national ethos."
+ harmonized_celestial:0 "Harmonized with the Celestial Faiths"
+ desc_harmonized_celestial:0 "We have incorporated the Celestial faiths in our country and national ethos."
+ harmonized_wushanko:0 "Harmonized with the Wushanko Faiths"
+ desc_harmonized_wushanko:0 "We have incorporated the Wushanko faiths in our country and national ethos."
