--- a/localisation/replace/giu_modifiers_l_english.yml
+++ b/localisation/replace/giu_modifiers_l_english.yml
@@ -873,6 +873,17 @@
  armadyl_wings_of_armadyl_modifier:0 "The Wings of Armadyl"
  desc_armadyl_wings_of_armadyl_modifier:0 "Armadyl has taken us under his wing, but we will never forget the good and ill that came from our time following Seren."
 
+ # Brassican
+
+ brassica_sacred_cabbages:0 "Sacred Cabbages"
+ desc_brassica_sacred_cabbages:0 "Glorious cabbages!"
+ brassica_refused_cabbages:0 "Refused Cabbages"
+ desc_brassica_refused_cabbages:0 "Yuck, I don't like cabbage."
+ brassica_destroyed_cabbages:0 "Destroyed Cabbages"
+ desc_brassica_destroyed_cabbages:0 "Cleanse these abonimations with fire!"
+ brassica_protected_cabbages:0 "Protected Cabbages"
+ desc_brassica_protected_cabbages:0 "A scarecrow a day keeps the evil away."
+
  # Godless
  
  godless_forget_the_faith:0 "Forget the Faith"
