Updated localisation for Vampyric age objective to fit the window.

--- a/localisation/replace/giu_ages_l_english.yml
+++ b/localisation/replace/giu_ages_l_english.yml
@@ -87,7 +87,7 @@
  obj_chaotic_age:0 "Chaotic Age"
  obj_chaotic_age_desc:0 "Have at least 90 Chaos."
  obj_victory_over_the_salve:0 "Victory over the Salve"
- obj_victory_over_the_salve_desc:0 "As a Vampyric nation, own 10 provinces in the Misthalin region that are following the Vampyric faith and are part of the Vampyre culture group."
+ obj_victory_over_the_salve_desc:0 "Own 10 provinces in the Misthalin region that are following the Vampyric faith and are part of the Vampyre culture group."
  obj_strength_of_saradomin:0 "Strength of Saradomin"
  obj_strength_of_saradomin_desc:0 "Help Entrana become a Great Power, or be the Apostocratic Controller."
  obj_return_of_armadyl:0 "Return of Armadyl"
