Fixing minor conflicts in province history. Added technology group descriptions to reduce editor warnings

--- a/localisation/giu_techgroups_l_english.yml
+++ b/localisation/giu_techgroups_l_english.yml
@@ -1,15 +1,29 @@
 ﻿l_english:
- centraltechgroup: "Central"
- morytaniantechgroup: "Morytanian"
- zeantechgroup: "Zean"
- kharidtechgroup: "Kharidian"
- dwarventechgroup: "Dwarven"
+ centraltechgroup:0 "Central"
+ centraltechgroup_desc:0 "Central Technology Group"
+ morytaniantechgroup:0 "Morytanian"
+ morytaniantechgroup_desc:0 "Morytanian Technology Group"
+ zeantechgroup:0 "Zean"
+ zeantechgroup_desc:0 "Zean Technology Group"
+ kharidtechgroup:0 "Kharidian"
+ kharidtechgroup_desc:0 "Kharidian Technology Group"
+ dwarventechgroup:0 "Dwarven"
+ dwarventechgroup_desc:0 "Dwarven Technology Group"
  karamjantechgroup:0 "Karamjan"
+ karamjantechgroup_desc:0 "Karamjan Technology Group"
  fremenniktechgroup:0 "Fremennik"
+ fremenniktechgroup_desc:0 "Fremennik Technology Group"
  northerntechgroup:0 "Northern"
+ northerntechgroup_desc:0 "Northern Technology Group"
  bandostechgroup:0 "Bandosian"
+ bandostechgroup_desc:0 "Bandosian Technology Group"
  monkeytechgroup:0 "Monkey"
+ monkeytechgroup_desc:0 "Monkey Technology Group"
  elventechgroup:0 "Elven"
+ elventechgroup_desc:0 "Elven Technology Group"
  kandarintechgroup:0 "Kandarian"
+ kandarintechgroup_desc:0 "Kandarian Technology Group"
  gnometechgroup:0 "Gnomish"
+ gnometechgroup_desc:0 "Gnomish Technology Group"
  wushankotechgroup:0 "Wushanko"
+ wushankotechgroup_desc:0 "Wushanko Technology Group"
