Fixed localisation key for flavor_evr.1

--- a/localisation/replace/Events/National Flavour/evr_events_l_english.yml
+++ b/localisation/replace/Events/National Flavour/evr_events_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  flavor_evr.1.t:0 "Cadarn elves join the resistance!"
  flavor_evr.1.da:0 "Some elves from the Cadarn kingdom have elected to permanently settle in Tirannwn to aid the resistance. This will provide us with a much-needed boost to our manpower, though there are concerns among some that the Cadarn kingdom could be significantly weakened in the process."
- flavor_evr_1.db:0 "With the fall of the Cadarn kingdom in the east, some of the survivors have made their way over to Tirannwn to serve our cause."
+ flavor_evr.1.db:0 "With the fall of the Cadarn kingdom in the east, some of the survivors have made their way over to Tirannwn to serve our cause."
  flavor_evr.1.a:0 "We are seven clans united!"
  
  flavor_evr.2.t:0 "Cadarn reaches out!"
