Updated another localisation regarding the old institution penalties

--- a/localisation/replace/giu_institutions_l_english.yml
+++ b/localisation/replace/giu_institutions_l_english.yml
@@ -99,8 +99,7 @@
  BIRTHPLACE_OF_INSTITUTION:0 "$PROV$ is the birthplace of §Y$NAME$§!"
  DATE_EARLIERST_FOR_INSTI:0 "This is the earliest date that this institution can appear and spread through the world."
  INSTITUTION_CAN_APPEAR:1 "Among your provinces it is most likely to appear in $PROVINCE|Y$ due to:\n"
- INSTITUTION_PENALTY_INFO:0 "The penalty for not having $NAME$ is now $CURR$, but will grow up to $MAX$ by §Y+1%§! each year when active."
- INSTITUTION_PENALTY_INFO_FULL:0 "The penalty for not having $NAME$ is $CURR$."
+ INSTITUTION_PENALTY_INFO:2 "Haven't embraced $NAME|Y$: $PENALTY$\n"
  CV_EMBRACE_INSTITUTION:0 "Embrace $NAME$"
  INSTI_NOT_YET:0 "This institution has not yet been created in the world."
  MBRACE_INSTITUTI:1 "Currently spreads by $SPEED$ each month."
