--- a/localisation/replace/giu_countries_l_english.yml
+++ b/localisation/replace/giu_countries_l_english.yml
@@ -195,7 +195,7 @@
  FTS:0 "Flou Tar-Shei"
  FTS_ADJ:0 "Flou Tar-Shei"
  FXE:0 "Ferox Enclave"
- FXE_AD:0 "Feroxxian"
+ FXE_ADJ:0 "Feroxxian"
  GDE:0 "Giants' Den"
  GDE_ADJ:0 "Den Giant"
  GDO:0 "Grand Ourania"
