--- a/localisation/replace/giu_cultures_l_english.yml
+++ b/localisation/replace/giu_cultures_l_english.yml
@@ -231,8 +231,8 @@
   strangled:0 "Strangled"
  mechanical_group:0 "Mechanical"
   automaton:0 "Automaton"
- gorago_group:0 "Gorago"
-  gorago:0 "Gorago"
+ gorajo_group:0 "Gorajo"
+  gorajo:0 "Gorajo"
   ramokee:0 "Ramokee"
  crassian_group:0 "Crassian"
   crassian:0 "Crassian"
